Fix collapse margins & height

--- a/web_app_drawer/static/src/less/app_drawer.less
+++ b/web_app_drawer/static/src/less/app_drawer.less
@@ -55,9 +55,7 @@
 /* App Drawer Toggle */
 
 .app-drawer-toggle {
-    height: @navbar-height;
     background-color: transparent;
-    padding-top: 2px;
 }
 
 .drawer .app-drawer-icon-close {
