--- a/web_app_drawer/static/src/less/navbar.less
+++ b/web_app_drawer/static/src/less/navbar.less
@@ -21,6 +21,14 @@
     margin-top: -@navbar-padding-horizontal;
 }
 
+.navbar-collapse, .navbar-toggle {
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    height: @navbar-height;
+}
+
 @media (max-width: @screen-sm - 1px) {
     #odooMenuBarNav[aria-expanded="false"] {
         /* Hack to hide the visibly expanded mobile menu on load. */
